nav bar fix alignment

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -20,14 +20,14 @@
     color: inherit;
     text-decoration: line-through;
 }
-.navbar .clients a:after {
+.navbar .clients a:after , .navbar .settings a:after{
     content: "Coming soon ";
     position: absolute;
     text-transform: uppercase;
     font-size: 9px;
     width: 120px;
-    margin-left: -60px;
-    margin-top: 24px;
+    left: 24px;
+    margin-top: 22px;
     opacity: 0;
 }
 .navbar .clients a {
@@ -41,16 +41,6 @@
 .navbar .clients a:hover {
     color: inherit;
     text-decoration: line-through;
-}
-.navbar .settings a:after {
-    content: "Coming soon ";
-    position: absolute;
-    text-transform: uppercase;
-    font-size: 9px;
-    width: 120px;
-    margin-left: -60px;
-    margin-top: 24px;
-    opacity: 0;
 }
 .navbar .settings a {
     text-decoration: line-through;
